--- a/views/friends/index.hbs
+++ b/views/friends/index.hbs
@@ -2,8 +2,8 @@
 
 
 <head>
-<h1> Furrends of</h1>
-<h1 id="mainuser">{{user.username}} </h1>
+<h1> Furrends</h1>
+<h1 style="display:none;" id="mainuser">{{user.username}} </h1>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
         var toggleUnfollowText = {
