--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container" >
     <div class="cat">
       <div class="face">
         <div class="ear-1">
@@ -113,16 +113,17 @@
   }
 </style>
 </head>
-<title>{{title}}</title>
+{{!-- <title>{{title}}</title> --}}
 
 <body>
-  <h1 style="text-align:center"> acebook </h1>
+  
+  <h1 style="text-align:center"> Catbook </h1>
   <p>
     {{pagename}}
   </p>
 
   {{#if shownavbar}}
-  <nav>
+  <nav> 
     <div class="navicon">
       <div></div>
     </div>
