--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -1,5 +1,18 @@
+<html>
+<head>
+
+</head>
+  <body>
+
 <form id="new-post-form" action="/posts" method="post">
   <label for="message">Message: </label>
   <input id="message" type="text" name="message" value="">
   <input type="submit" value="Submit">
 </form>
+
+  </body>
+
+
+
+
+</html>
