--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -4,12 +4,14 @@
 </head>
   <body>
 <form id="new-user-form" action="/users" method="post">
-  <label for="email">Email: </label>
   <input id="email" type="email" name="email" value="">
-  <label for="username">Username: </label>
+  <label for="email">Email: </label><br>
   <input id="username" type="username" name="username" value="">
-  <label for="password">Password: </label>
+  <label for="username">Username: </label><br>
   <input id="password" type="password" name="password" value="">
+  <label for="password">Password: </label><br>
+  <input id="profilepic" type="profilepic" name="profilepic" value="">
+  <label for="profilepic">Profile Pic URL --optional!</label><br>
   <input id="submit" type="submit" value="Submit">
 </form>
 </body>
