--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -7,12 +7,12 @@
 <form id="new-post-form" action="/posts" method="post">
   <label for="message">Message: </label>
   <input id="message" type="text" name="message" value="">
+  
+  <label for="photo-upload">Photo URL: </label>
+  <input id="photoURL" type="text" name="photoURL" value="">
   <input type="submit" value="Submit">
 </form>
 
   </body>
-
-
-
 
 </html>
