--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -82,7 +82,15 @@ body{
   width: 30px;
   border-radius: 50%;
   position: relative; 
+  animation: blink 2.5s infinite;
 }
+
+
+@keyframes blink {
+  0% {transform: scale(1, 0.1);}
+  100% {transform: scale(1, 1);}
+}
+
 .eye-1{
   bottom: 75px;
   left: 30px;
@@ -90,6 +98,7 @@ body{
 .eye-r{
   bottom: 105px;
   left: 90px;
+
 }
 .eyeball{
   background-color: #262626;
@@ -99,6 +108,7 @@ body{
   position: relative;
   top: 3px;
   left: 3px;
+  animation: blink 2.5s infinite;
 }
 .nose{
   height: 0;
