--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -187,7 +187,7 @@
         {{!-- adds a little meow with the like counter, associated with this.id and showing this.likes_count --}}
         <div class="row" style="display: inline-block; margin-left: -20px;"></div>
         <span>&#x1F63B;</span>
-        <span id="likes-count-{{ this.id }}">{{ this.likes }}</span>
+        <span class="likes" id="likes-count-{{ this.id }}">{{ this.likes }}</span>
 
         <span style="margin-left:30px">&#128062;</span>
         <span id="loves-count-{{ this.id }}">{{ this.loves }}</span>
